documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long * LPHVL;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

AX1W32API ULONG __stdcall AX1_Shr(ULONG dataval,INT cntval);

AX1W32API USHORT __stdcall AX1_SignMant(LPCSTR str);

AX1W32API USHORT __stdcall AX1_Transpose12(USHORT val);

AX1W32API INT __stdcall AX1_ValAsciiCmpi(LPSTR str1,LPSTR str2);

AX1W32API LPSTR __stdcall AX1_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

AX1W32API VOID __stdcall AX1_ValAsciiTrimLead(LPSTR buf);

AX1W32API VOID __stdcall AX1_ValAsciiTrimTrail(LPSTR buf);

AX1W32API ULONG __stdcall AX1_ValFromAscii(LPCSTR asciistr,INT radixval);

AX1W32API ULONG __stdcall AX1_ValGetBits(ULONG oldvalue,INT startbit,INT endbit);

AX1W32API LPSTR __stdcall AX1_ValIncAscii(LPSTR asciistr);

AX1W32API LPSTR __stdcall AX1_ValInccAscii(LPSTR asciistr);

AX1W32API BOOL __stdcall AX1_ValIsLower(INT value);

AX1W32API INT __stdcall AX1_ValLenAscii(INT numbits,INT radixval);

AX1W32API ULONG __stdcall AX1_ValPutBits(ULONG oldvalue,ULONG newfld,INT startbit,INT endbit);

AX1W32API LPSTR __stdcall AX1_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

AX1W32API INT __stdcall AX1_ValToUpper(INT value);

AX1W32API ERRVAL __stdcall AX1_VLConfigEx(ULONG configval,USHORT vlid,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigExx(ULONG configval,USHORT vlid,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigMACEx(ULONG configval,ADDRESS macdst,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigMACExx(ULONG configval,ADDRESS macdst,ADDRESS macsrc,ULONG ipdst,ULONG ipsrc,ULONG bag_us,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetConfig(LPULONG pconfigval,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetFactors(LPINT pfactor0,LPINT pfactor1,LPINT pfactor2,LPINT pfactor3,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetInfoEx(LPULONG configval,LPUSHORT vlid,LPADDRESS pmacdst,LPADDRESS pmacsrc,LPULONG ipdst,LPULONG ipsrc,LPULONG bag_us,LPULONG skew,HVL hvl,HCARD handleval);

AX1W32API BOOL __stdcall AX1_VLIsHostRcv(HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLSetConfig(ULONG configval,HVL hvl,HCARD handleval);