documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_Shr Lib "AX1W32.DLL" Alias "_AX1_Shr@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
    Public Declare Function AX1_SignMant Lib "AX1W32.DLL" Alias "_AX1_SignMant@4" (ByVal str As String) As Short
    Public Declare Function AX1_Transpose12 Lib "AX1W32.DLL" Alias "_AX1_Transpose12@4" (ByVal val As Short) As Short
    Public Declare Function AX1_ValAsciiCmpi Lib "AX1W32.DLL" Alias "_AX1_ValAsciiCmpi@8" (ByVal str1 As String, ByVal str2 As String) As Integer
    Public Declare Function AX1_ValAsciiCpy Lib "AX1W32.DLL" Alias "_AX1_ValAsciiCpy@12" (ByVal strdest As String, ByVal strsrc As String, ByVal count As Integer) As String
    Public Declare Sub AX1_ValAsciiTrimLead Lib "AX1W32.DLL" Alias "_AX1_ValAsciiTrimLead@4" (ByVal buf As String)
    Public Declare Sub AX1_ValAsciiTrimTrail Lib "AX1W32.DLL" Alias "_AX1_ValAsciiTrimTrail@4" (ByVal buf As String)
    Public Declare Function AX1_ValFromAscii Lib "AX1W32.DLL" Alias "_AX1_ValFromAscii@8" (ByVal asciistr As String, ByVal radixval As Integer) As Integer
    Public Declare Function AX1_ValGetBits Lib "AX1W32.DLL" Alias "_AX1_ValGetBits@12" (ByVal oldvalue As Integer, ByVal startbit As Integer, ByVal endbit As Integer) As Integer
    Public Declare Function AX1_ValIncAscii Lib "AX1W32.DLL" Alias "_AX1_ValIncAscii@4" (ByVal asciistr As String) As String
    Public Declare Function AX1_ValInccAscii Lib "AX1W32.DLL" Alias "_AX1_ValInccAscii@4" (ByVal asciistr As String) As String
    Public Declare Function AX1_ValIsLower Lib "AX1W32.DLL" Alias "_AX1_ValIsLower@4" (ByVal value As Integer) As Integer
    Public Declare Function AX1_ValLenAscii Lib "AX1W32.DLL" Alias "_AX1_ValLenAscii@8" (ByVal numbits As Integer, ByVal radixval As Integer) As Integer
    Public Declare Function AX1_ValPutBits Lib "AX1W32.DLL" Alias "_AX1_ValPutBits@16" (ByVal oldvalue As Integer, ByVal newfld As Integer, ByVal startbit As Integer, ByVal endbit As Integer) As Integer
    Public Declare Function AX1_ValToAscii Lib "AX1W32.DLL" Alias "_AX1_ValToAscii@16" (ByVal value As Integer, ByVal asciistr As String, ByVal numbits As Integer, ByVal radixval As Integer) As String
    Public Declare Function AX1_ValToUpper Lib "AX1W32.DLL" Alias "_AX1_ValToUpper@4" (ByVal value As Integer) As Integer
    Public Declare Function AX1_VLConfigEx Lib "AX1W32.DLL" Alias "_AX1_VLConfigEx@28" (ByVal configval As Integer, ByVal vlid As Short, ByVal bag_us As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLConfigExx Lib "AX1W32.DLL" Alias "_AX1_VLConfigExx@44" (ByVal configval As Integer, ByVal vlid As Short, ByVal macsrc As ADDRESS, ByVal ipdst As Integer, ByVal ipsrc As Integer, ByVal bag_us As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLConfigMACEx Lib "AX1W32.DLL" Alias "_AX1_VLConfigMACEx@32" (ByVal configval As Integer, ByVal macdst As ADDRESS, ByVal bag_us As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLConfigMACExx Lib "AX1W32.DLL" Alias "_AX1_VLConfigMACExx@48" (ByVal configval As Integer, ByVal macdst As ADDRESS, ByVal macsrc As ADDRESS, ByVal ipdst As Integer, ByVal ipsrc As Integer, ByVal bag_us As Integer, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetConfig Lib "AX1W32.DLL" Alias "_AX1_VLGetConfig@12" (ByRef pconfigval As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetFactors Lib "AX1W32.DLL" Alias "_AX1_VLGetFactors@24" (ByRef pfactor0 As Integer, ByRef pfactor1 As Integer, ByRef pfactor2 As Integer, ByRef pfactor3 As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetInfoEx Lib "AX1W32.DLL" Alias "_AX1_VLGetInfoEx@40" (ByRef configval As Integer, ByRef vlid As Short, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef ipdst As Integer, ByRef ipsrc As Integer, ByRef bag_us As Integer, ByRef skew As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_VLIsHostRcv@8" (ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLSetConfig Lib "AX1W32.DLL" Alias "_AX1_VLSetConfig@12" (ByVal configval As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer

End Module
